# ChangeLog for dev-ml/pomap
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ml/pomap/ChangeLog,v 1.28 2013/08/19 16:19:50 aballier Exp $

  19 Aug 2013; Alexis Ballier <aballier@gentoo.org> pomap-3.0.1.ebuild,
  +files/pomap-3.0.1-ocaml-4.01.patch:
  Fix build with ocaml 4.01.

  10 Mar 2013; Alexis Ballier <aballier@gentoo.org> -pomap-2.9.9.ebuild:
  remove old

  12 Feb 2013; Agostino Sarubbo <ago@gentoo.org> pomap-3.0.1.ebuild:
  Stable for ppc, wrt bug #456558

  11 Feb 2013; Agostino Sarubbo <ago@gentoo.org> pomap-3.0.1.ebuild:
  Stable for x86, wrt bug #456558

  11 Feb 2013; Agostino Sarubbo <ago@gentoo.org> pomap-3.0.1.ebuild:
  Stable for amd64, wrt bug #456558

  11 Feb 2013; Alexis Ballier <aballier@gentoo.org> pomap-3.0.1.ebuild:
  eapi5, add subslot and use := deps

*pomap-3.0.1 (10 Oct 2012)

  10 Oct 2012; Alexis Ballier <aballier@gentoo.org> +pomap-3.0.1.ebuild:
  version bump

  28 Sep 2009; Petteri Räty <betelgeuse@gentoo.org> -pomap-2.9.8.ebuild:
  Remove old version using built_with_use.

  14 Aug 2009; Markus Meier <maekke@gentoo.org> pomap-2.9.9.ebuild:
  amd64/x86 stable, bug #280417

  09 Aug 2009; nixnut <nixnut@gentoo.org> pomap-2.9.9.ebuild:
  ppc stable #280417

*pomap-2.9.9 (21 Jun 2009)

  21 Jun 2009; Alexis Ballier <aballier@gentoo.org> +pomap-2.9.9.ebuild:
  version bump

  21 Jun 2009; Alexis Ballier <aballier@gentoo.org> pomap-2.9.8.ebuild:
  define eapi before inherit and assign rdepend explicitly

  13 Apr 2008; Alexis Ballier <aballier@gentoo.org> -pomap-2.9.4.ebuild:
  remove old

  12 Apr 2008; Tobias Scherbaum <dertobi123@gentoo.org> pomap-2.9.8.ebuild:
  ppc stable, bug #216964

  11 Apr 2008; Markus Meier <maekke@gentoo.org> pomap-2.9.8.ebuild:
  amd64/x86 stable, bug #216964

*pomap-2.9.8 (04 Jan 2008)

  04 Jan 2008; Alexis Ballier <aballier@gentoo.org> +pomap-2.9.8.ebuild:
  version bump, allow to build without ocamlopt
