@@ -3,13 +3,15 @@ Hash: SHA256
 
 AUX pomap-3.0.1-ocaml-4.01.patch 1174 SHA256 a2169920cfe552bfb143257bbd22e83ee21a04c8bf8e98fe3c0cdd2018b859f0 SHA512 669bc32a2396f3ad86c369ccfbdb8a9ae83c59f864707d4ccef2e173d3177b3bd15ae69acdd971b2be98f559120c4ffa5a3b17b139d06877ebb590ca84f13ff2 WHIRLPOOL 0f156b34067fca1ccda36ac1c48b4ea5be13c8d9f39486f5544f3da80044e1afcbbfc6ed616c3d7e86a53abf731c6338e4612be1754962fdb1166ac7a648a1bc
 DIST pomap-3.0.1.tar.gz 69989 SHA256 1afbedafedb6922937cb58b3bbef057e69f2908cac899288257ba608fbf534ce SHA512 901c7655686711978df476332d2ef969c6eefa47a276f88e227c43d95e21d4bc6e301b3880d69a3c5c1e2278c1bab511e9b538f8278ad79ee0ea54efe6dcae5d WHIRLPOOL 1c2893ba61058e3effa03b2d42972c2c2f3d733c5c815b90a4ea95e701ab17917969088868c7a220387127bb10bd190aea7cbfaa1c2facd0807da0c62118f858
+DIST pomap-3.0.2.tar.gz 69919 SHA256 44e9a7ca73fc8a11ffccaed65444e1cf67b1ccb2737f942bd6a99f6ceb743e0c SHA512 cbf239023c0861fd076895c45c9fb05e9794af4ecab913a5a0fbba188ed1c52a8f880ffe66dda0845863a31e30cd34f40add872abe0135c79467dda6c429423f WHIRLPOOL aec4f2aec45ae2768d43c8e14b7d515dd0a6ac841c9b11a402499f1bfc2f825e06102826ca6437fcad0830ea6356fae9bc50d62651d5c9b7873764b84e9d4c05
 EBUILD pomap-3.0.1.ebuild 831 SHA256 609517601cf596d38811530b83622f7d630d5d65af891cc19a7195567f9b4396 SHA512 f647a192315708951cb2d0d6b83e81f91fca1f6a2f7d00e927e6297b75d14e1ab3d19b786767fa6a7b129ee14bc83d631ebbc5fc36ca3629a5045ff39822c9cd WHIRLPOOL 79b5a89210ffea7ce86a3885d777279c9009568e7a72ddd1b5cd83af02de9c2a71dfb6af5cea818e0adb1d521706fa40edff2b34683e2198677da509834c66a5
-MISC ChangeLog 3019 SHA256 bece37e810a6e242f497e5d6bdcec692e55639f2a3c2cff090080d1413102b61 SHA512 5277e73f05b623b2210c7ae63d94a7076c461238ce4b1e9487fbd953c9d8613c1ea5d4c27f8f98f57da327dcc5b60aee0ab05f5e3083d9b7d79a8c97dec35e4b WHIRLPOOL 09b0c2e404cba072d0afceccb0412b2fdfab5ca6a9e75fa5dfa29c3019447779306063e6c2d92087952b8370147834181c208060395b9a43227a4868cb377abf
+EBUILD pomap-3.0.2.ebuild 766 SHA256 a5a78426890d2a0bbb6e36cc4db7ba56bc415ad28589a8aa960f643cb91832be SHA512 2d54a5ddaf69d7ca99f555e4e67eeaa532922061d082b13bd157e968c08e4e846a0341e800a22ffb87a1f609899a69a48c13a9bf5373358dfc818ce486bc92f6 WHIRLPOOL 148f538b1595ddb41a8ad331a034abfd0f7083e5486810bd68ad9716db3b32d9fb8cdd5f3a2db8f9a37c6421d39ed21a041fced6047e62e862afd517cc4fa7da
+MISC ChangeLog 3209 SHA256 763ba6c9ed578fb438b19952cbcc6d65ba393d61d1a334410ca28845764dedd7 SHA512 f366a1a1ab27cca8902196e4077a1452c8d5141724bca814612c98518f74373d2bb302b59e15ac1e1b6e4e53d2d039950bf29395218619bc2d49d51a095bbe93 WHIRLPOOL be033d45d036bb8632dd0799840ce7203be288c5743786a1ed365f93e3a6b2ef7af2efb9664bd2cd22e94e4f9380551a556002aafd59d829d819e78d0581cf10
 MISC metadata.xml 157 SHA256 d14b8b08774f2a40f42d70ff40b1b4f1c4725e7095d702143a32909553eac799 SHA512 5e4a17ffdcc021c3d28f9ac71f8ec0b35a243e269281ba7db2e17845d7990221040ab16db6fa13c708f7d8db154d8d65d2d7f80f3a7dd84bc001449369738f2f WHIRLPOOL 79ae48d5df04eab0d90848c85d48c62b0e3901cc5c9a74d0b85de5becac5de0f55a3c9c719bf716bb757cfd8be306a222f247a0749fb346f6589893698b25c63
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlISRacACgkQvFcC4BYPU0q7ZACgsHtEe5f8asrJ2MnihdNZWHxd
-VeoAni88bZeMu3PqIIg309gA3bJ8FMOv
-=q1yl
+iEYEAREIAAYFAlISXIMACgkQvFcC4BYPU0pPoQCfVs3YrSCUI0K06e8RVvuomYgo
+QZ0AnA7XXSKhECViq5II+01DnXWHUobN
+=Wldu
 -----END PGP SIGNATURE-----
