@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare test unpack
+DEPEND=>=dev-ml/findlib-1.0.4-r1 >=dev-lang/ocaml-3.12:=[ocamlopt?]
+DESCRIPTION=Partially Ordered Map ADT for O'Caml
+EAPI=5
+HOMEPAGE=http://bitbucket.org/mmottl/pomap
+IUSE=examples +ocamlopt debug doc
+KEYWORDS=~amd64 ~ppc ~x86
+LICENSE=LGPL-2.1-with-linking-exception
+RDEPEND=>=dev-lang/ocaml-3.12:=[ocamlopt?]
+SLOT=0/3.0.2
+SRC_URI=http://bitbucket.org/mmottl/pomap/downloads/pomap-3.0.2.tar.gz
+_eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	63afaaed8aa819fdcb814c7cd39495a2	findlib	9cf6020ee5481f39f1aa566a323f9868	multilib	892e597faee02a5b94eb02ab512e7622	oasis	d59efb9f3ae0e24a1932b2147425fb8d	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=cf9ac05b339191eafca88fb5478fd10e
