@@ -1,6 +1,12 @@
 # ChangeLog for dev-ml/pomap
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/pomap/ChangeLog,v 1.28 2013/08/19 16:19:50 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/pomap/ChangeLog,v 1.29 2013/08/19 17:57:22 aballier Exp $
+
+*pomap-3.0.2 (19 Aug 2013)
+
+  19 Aug 2013; Alexis Ballier <aballier@gentoo.org> +pomap-3.0.2.ebuild:
+  Version bump with upstream patch to build with ocaml 4.01. Do not compress
+  examples
 
   19 Aug 2013; Alexis Ballier <aballier@gentoo.org> pomap-3.0.1.ebuild,
   +files/pomap-3.0.1-ocaml-4.01.patch:
